corrected table columns

--- a/dataToDatabase.ipynb
+++ b/dataToDatabase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -51,18 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "con = sqlite3.connect(\"fullsky5year.db\")"
+    "con = sqlite3.connect(dbname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -118,39 +118,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x108ceb570>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con.execute(\"\"\"\n",
-    "CREATE TABLE noAstromErr (\n",
-    "\tnum\tINTEGER,\n",
-    "\tnightid\tINTEGER,\n",
-    "\tobjid\tINTEGER,\n",
-    "\tra\tREAL,\n",
-    "\tdec\tREAL,\n",
-    "\tmjd\tREAL,\n",
-    "\tmag\tREAL,\n",
-    "\tsnr\tREAL\n",
-    ");\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -159,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x108ceb500>"
+       "<sqlite3.Cursor at 0x108d40490>"
       ]
      },
      "execution_count": 10,
@@ -169,10 +136,10 @@
    ],
    "source": [
     "con.execute(\"\"\"\n",
-    "CREATE TABLE withAstromErr (\n",
-    "\tnum\tINTEGER,\n",
-    "\tnightid\tINTEGER,\n",
-    "\tobjid\tINTEGER,\n",
+    "CREATE TABLE noAstromErr (\n",
+    "\tdiaid\tINTEGER,\n",
+    "\tobshistid\tINTEGER,\n",
+    "\tssmid\tINTEGER,\n",
     "\tra\tREAL,\n",
     "\tdec\tREAL,\n",
     "\tmjd\tREAL,\n",
@@ -188,9 +155,31 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x108d403b0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data1 = pd.read_csv(dataSet1, header=None, delim_whitespace=True, names=['num','nightid','objid','ra','dec','mjd','mag','snr'], index_col='num')"
+    "con.execute(\"\"\"\n",
+    "CREATE TABLE withAstromErr (\n",
+    "\tdiaid\tINTEGER,\n",
+    "\tobshistid\tINTEGER,\n",
+    "\tssmid\tINTEGER,\n",
+    "\tra\tREAL,\n",
+    "\tdec\tREAL,\n",
+    "\tmjd\tREAL,\n",
+    "\tmag\tREAL,\n",
+    "\tsnr\tREAL\n",
+    ");\n",
+    "\"\"\")"
    ]
   },
   {
@@ -201,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "data2 = pd.read_csv(dataSet2, header=None, delim_whitespace=True, names=['num','nightid','objid','ra','dec','mjd','mag','snr'], index_col='num')"
+    "data1 = pd.read_csv(dataSet1, header=None, delim_whitespace=True, names=['diaid','obshistid','ssmid','ra','dec','mjd','mag','snr'], index_col='diaid')"
    ]
   },
   {
@@ -212,12 +201,23 @@
    },
    "outputs": [],
    "source": [
-    "data1.to_sql('noAstromErr', con, if_exists='append')"
+    "data2 = pd.read_csv(dataSet2, header=None, delim_whitespace=True, names=['diaid','obshistid','ssmid','ra','dec','mjd','mag','snr'], index_col='diaid')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data1.to_sql('noAstromErr', con, if_exists='append')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
