--- a/dataPreparation.ipynb
+++ b/dataPreparation.ipynb
@@ -92,60 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['51029.dias',\n",
-       " '51030.dias',\n",
-       " '51031.dias',\n",
-       " '51032.dias',\n",
-       " '51033.dias',\n",
-       " '51034.dias',\n",
-       " '51035.dias',\n",
-       " '51036.dias',\n",
-       " '51038.dias',\n",
-       " '51039.dias',\n",
-       " '51040.dias',\n",
-       " '51041.dias',\n",
-       " '51042.dias',\n",
-       " '51043.dias',\n",
-       " '51044.dias',\n",
-       " '51045.dias',\n",
-       " '51046.dias',\n",
-       " '51047.dias',\n",
-       " '51048.dias',\n",
-       " '51049.dias',\n",
-       " '51050.dias',\n",
-       " '51051.dias',\n",
-       " '51052.dias',\n",
-       " '51053.dias',\n",
-       " '51054.dias',\n",
-       " '51055.dias',\n",
-       " '51056.dias',\n",
-       " '51057.dias',\n",
-       " '51058.dias',\n",
-       " '51059.dias',\n",
-       " '51060.dias',\n",
-       " '51061.dias']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nightly_noErr_sources "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -162,6 +109,155 @@
    ],
    "source": [
     "! findTracklets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "alias findTracklets findTracklets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\r\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\r\n",
+      "  Reason: image not found\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "findTracklets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n",
+      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
+      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
+      "  Reason: image not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in os.listdir(nightly_noErr):\n",
+    "    outfile = tracklets_noErr + '/' + n + '.tracklet'\n",
+    "    infile = nightly_noErr + '/' + n\n",
+    "    ! findTracklets -i {infile} -o {outfile}"
    ]
   },
   {
