added directoryBuilder function

--- a/dataPreparation.ipynb
+++ b/dataPreparation.ipynb
@@ -21,22 +21,103 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vmax1 = 0.5\n",
+    "vmax2 = 2.0\n",
+    "\n",
+    "dataSet1 = 'fullSky_year5_withinMagLimits_noAstromErr.txt'\n",
+    "dataSet2 = 'fullSky_year5_withinMagLimits_withAstromError.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dataSet1 = 'fullSky_year5_withinMagLimits_noAstromErr.txt'\n",
-    "dataSet2 = 'fullSky_year5_withinMagLimits_withAstromError.txt'\n",
-    "\n",
-    "nightly_noErr = 'nightlyOutput_noErr'\n",
-    "obshit_noErr = 'obshitOutput_noErr'\n",
-    "nightly_withErr = 'nightlyOutput_withErr'\n",
-    "obshit_withErr = 'obshitOutput_withErr'\n",
-    "tracklets_noErr = 'tracklets_noErr'\n",
-    "tracklets_withErr = 'tracklets_withErr'\n",
-    "\n",
-    "dataSets = [dataSet1, dataSet2]\n",
-    "dirs = [nightly_noErr, obshit_noErr, nightly_withErr, obshit_withErr, tracklets_noErr, tracklets_withErr]"
+    "def directoryBuilder(vmax, name, gitDirectory='', insideGitRepo=True):\n",
+    "    \n",
+    "    nightlyDir = 'nightly_v%s_%s' % (str(vmax), name)\n",
+    "    obshistDir = 'obshist_v%s_%s' % (str(vmax), name)\n",
+    "    trackletsDir = 'tracklets_v%s_%s' % (str(vmax), name)\n",
+    "    tracksDir = 'tracks_v%s_%s' % (str(vmax), name)\n",
+    "    \n",
+    "    dirs = [nightlyDir, obshistDir, trackletsDir, tracksDir]\n",
+    "    \n",
+    "    for d in dirs:\n",
+    "        try:\n",
+    "            os.stat(d)\n",
+    "            print d + ' already exists'\n",
+    "        except:\n",
+    "            os.mkdir(d)\n",
+    "            print 'Created %s directory.' % (d)\n",
+    "            \n",
+    "            if insideGitRepo:\n",
+    "                gitignore = gitDirectory + '.gitignore'\n",
+    "                with open(gitignore, 'a' ) as file:\n",
+    "                    file.write(d + '\\n')\n",
+    "                    \n",
+    "                print 'Added all directories to .gitignore.'\n",
+    "            \n",
+    "    return dirs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created nightly_v0.5_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created obshist_v0.5_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracklets_v0.5_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracks_v0.5_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created nightly_v2.0_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created obshist_v2.0_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracklets_v2.0_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracks_v2.0_noErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created nightly_v0.5_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created obshist_v0.5_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracklets_v0.5_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracks_v0.5_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created nightly_v2.0_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created obshist_v2.0_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracklets_v2.0_withErr directory.\n",
+      "Added all directories to .gitignore.\n",
+      "Created tracks_v2.0_withErr directory.\n",
+      "Added all directories to .gitignore.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dirs_noErr1 = directoryBuilder(vmax1, 'noErr')\n",
+    "dirs_noErr2 = directoryBuilder(vmax2, 'noErr')\n",
+    "dirs_withErr1 = directoryBuilder(vmax1, 'withErr')\n",
+    "dirs_withErr2 = directoryBuilder(vmax2, 'withErr')"
    ]
   },
   {
@@ -48,20 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# make nightly and obshist directories for splitByNight.py\n",
-    "for d in dirs:\n",
-    "    ! mkdir {d}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -92,28 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\r\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\r\n",
-      "  Reason: image not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! findTracklets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -124,135 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\r\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\r\n",
-      "  Reason: image not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "findTracklets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n",
-      "dyld: Library not loaded: @rpath/../opt/lsst/gsl/lib/libgsl.0.dylib\n",
-      "  Referenced from: /Users/joachim/repos/mops/mops_daymops/bin/findTracklets\n",
-      "  Reason: image not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for n in os.listdir(nightly_noErr):\n",
     "    outfile = tracklets_noErr + '/' + n + '.tracklet'\n",
