corrected redudant directory building

--- a/dataPreparation.ipynb
+++ b/dataPreparation.ipynb
@@ -29,7 +29,9 @@
     "vmax2 = 2.0\n",
     "\n",
     "dataSet1 = 'fullSky_year5_withinMagLimits_noAstromErr.txt'\n",
-    "dataSet2 = 'fullSky_year5_withinMagLimits_withAstromError.txt'"
+    "dataSet2 = 'fullSky_year5_withinMagLimits_withAstromError.txt'\n",
+    "\n",
+    "mopsDir = '/Users/joachim/repos/mops/mops_daymops/bin/'"
    ]
   },
   {
@@ -42,8 +44,8 @@
    "source": [
     "def directoryBuilder(vmax, name, gitDirectory='', insideGitRepo=True):\n",
     "    \n",
-    "    nightlyDir = 'nightly_v%s_%s' % (str(vmax), name)\n",
-    "    obshistDir = 'obshist_v%s_%s' % (str(vmax), name)\n",
+    "    nightlyDir = 'nightly_%s' % (name)\n",
+    "    obshistDir = 'obshist_%s' % (name)\n",
     "    trackletsDir = 'tracklets_v%s_%s' % (str(vmax), name)\n",
     "    tracksDir = 'tracks_v%s_%s' % (str(vmax), name)\n",
     "    \n",
@@ -78,34 +80,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created nightly_v0.5_noErr directory.\n",
+      "Created nightly_noErr directory.\n",
       "Added all directories to .gitignore.\n",
-      "Created obshist_v0.5_noErr directory.\n",
+      "Created obshist_noErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracklets_v0.5_noErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracks_v0.5_noErr directory.\n",
       "Added all directories to .gitignore.\n",
-      "Created nightly_v2.0_noErr directory.\n",
-      "Added all directories to .gitignore.\n",
-      "Created obshist_v2.0_noErr directory.\n",
-      "Added all directories to .gitignore.\n",
+      "nightly_noErr already exists\n",
+      "obshist_noErr already exists\n",
       "Created tracklets_v2.0_noErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracks_v2.0_noErr directory.\n",
       "Added all directories to .gitignore.\n",
-      "Created nightly_v0.5_withErr directory.\n",
+      "Created nightly_withErr directory.\n",
       "Added all directories to .gitignore.\n",
-      "Created obshist_v0.5_withErr directory.\n",
+      "Created obshist_withErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracklets_v0.5_withErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracks_v0.5_withErr directory.\n",
       "Added all directories to .gitignore.\n",
-      "Created nightly_v2.0_withErr directory.\n",
-      "Added all directories to .gitignore.\n",
-      "Created obshist_v2.0_withErr directory.\n",
-      "Added all directories to .gitignore.\n",
+      "nightly_withErr already exists\n",
+      "obshist_withErr already exists\n",
       "Created tracklets_v2.0_withErr directory.\n",
       "Added all directories to .gitignore.\n",
       "Created tracks_v2.0_withErr directory.\n",
@@ -136,7 +134,7 @@
    "outputs": [],
    "source": [
     "# run splitByNight.py on noErr dataset\n",
-    "! python /Users/joachim/repos/mops/mops_daymops/bin/splitByNight.py {dataSet1} {nightly_noErr} {obshit_noErr}"
+    "! python {mopsDir}/splitByNight.py {dataSet1} {dirs_noErr1[0]} {dirs_noErr1[1]}"
    ]
   },
   {
@@ -148,7 +146,7 @@
    "outputs": [],
    "source": [
     "# run splitByNight.py on withErr dataset\n",
-    "! python /Users/joachim/repos/mops/mops_daymops/bin/splitByNight.py {dataSet2} {nightly_withErr} {obshit_withErr}"
+    "! python {mopsDir}/splitByNight.py {dataSet2} {dirs_withErr1[0]} {dirs_withErr1[1]}"
    ]
   },
   {
